# trinity-s3ai

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS_H4_APPLICATION.md  CITATION.bib  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COQ_HONEST_STATUS.md  CRITIC_RESPONSE_v46.md  Catalog42_corrected.v  DELTA_CP_HONEST_STATUS.md  EPISTEMOLOGY.md  EXPLAINED_Lagrangian.md  FINAL_STATUS.md  FINAL_STATUS_v44.md  FORMULAS.md  FOUNDATIONS.md  Gemfile  HONESTY_MANIFEST.md  HONEST_ASSESSMENT_Wave14.md  IMPACT_ASSESSMENT.md  IMPACT_COMPARISON.md  IMPROVEMENT_PLAN.md  LAGRANGIAN_HONEST_STATUS.md  LICENSE  N_GEN_HONEST_STATUS.md  PREDICTIONS_PREREGISTERED.md  README.md  README_v46.md  RELEASE_NOTES_v1.0-wave11.md  RELEASE_NOTES_v1.0-wave14.md  REMAINING_PROBLEMS.md  RESEARCH_STATUS.md  RISKY_PREDICTIONS.md  ROADMAP.md  ROADMAP_FIX_ALL.md  ROADMAP_WAVE17_PLUS.md  SALVAGE.md  SECURITY.md  (+53 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  cyrillic-check.yml  lean.yml  pages.yml  release.yml  rust.yml
archive/legacy/: CRITIC_RESPONSE_v46.md  README_v46.md
arxiv_submission/: wave13_paper.tex
arxiv_submission/anc/: README_anc.txt  d4_analysis.py  spectral_action.py
bench/nmse/: 47deded.json  b589f1c.json
communications/drafts/: letter_furey.md  letter_martinetti.md  letter_wilson.md
derivations/: wave11_admitted_log.md  wave13_admitted_log.md  wave14_admitted_log.md  wave15_admitted_log.md  wave16_clifford_log.md
derivations/alt_crystallography/: comparison.md  probe_d4_f4.py
derivations/axiom6_orientation/: Axiom6Orientation.v  cycle_construction.py  orientation_analysis.md
derivations/axiom7_poincare/: Axiom7Poincare.v  poincare_analysis.md  poincare_pairing.py
derivations/catalog_audit/: audit_report.md  full_audit.csv  honest_pvalue_report_v18.md  sigma_ranking.md  wave18_mc_results.json
derivations/chirality/: ChiralityAnalysis.v  chirality_analysis.md
derivations/ckm_pmns/: CKM_PMNS_origins.md  MixingOrigins.v
derivations/cl8_triality/: cl8_triality_exploration.py  triality_analysis.md  triality_results.json
derivations/cosmology/: CosmologyOrigins.v  cosmology_origins.md
derivations/delta_cp_crisis/: Wave16_investigation.md
derivations/df_spectrum/: DFSpectrum.v  compute_df_spectrum.py  df_analysis.md  spectrum.json
derivations/dirac_operator/: DiracOperator.v  dirac_design.md
derivations/e8_bulk/: construction.md  e8_h4_folding.py  e8_h4_results.json
derivations/e8_plumbing/: b_matrix_derivation.py  b_matrix_results.json  explicit_plumbing_research.md  full_e8_plumbing.py  full_e8_results.json
derivations/eta_2t_2o/: compute_eta_table.py  eta_table_analysis.md
derivations/eta_df_bridge/: EtaDFBridge.v  bridge_analysis.md  bridge_analysis.py  bridge_analysis_v2.py  bridge_results.json  bridge_results_v2.json
derivations/gauge/: G01_G02_origins.md  (+2 more)
docs/: BUILD.md  CLAIM_STATUS.md  HARDWARE_ATTESTATION.md  REPOSITORY_MAP.md  REVIEW_CHECKLIST.md  REVIEW_GUIDE.md  TECH_TREE.md  claims.yaml
games/trinity_fold/: Cargo.toml  README.md
games/trinity_fold/crates/app/: Cargo.toml
games/trinity_fold/crates/app/src/: main.rs
games/trinity_fold/crates/app/tests/: ring_boundaries.rs  scoring.rs
games/trinity_fold/crates/ring0_core/: Cargo.toml
games/trinity_fold/crates/ring0_core/src/: board.rs  claim.rs  lib.rs  node.rs
games/trinity_fold/crates/ring1_constraints/: Cargo.toml
games/trinity_fold/crates/ring1_constraints/src/: lib.rs  scoring.rs
games/trinity_fold/crates/ring2_search/: Cargo.toml
games/trinity_fold/crates/ring2_search/src/: lib.rs  rng.rs  search.rs
games/trinity_fold/crates/ring3_adapters/: Cargo.toml
games/trinity_fold/crates/ring3_adapters/src/: claim_cards.rs  fixtures.rs  io.rs  lib.rs  web.rs
games/trinity_fold/crates/ring4_canvas/: Cargo.toml
games/trinity_fold/crates/ring4_canvas/examples/: snapshot_svg.rs
games/trinity_fold/crates/ring4_canvas/src/: bridge.rs  input.rs  lib.rs  recipes.rs  render.rs  state.rs  wasm.rs
games/trinity_fold/docs/: ARCHITECTURE.md  BENCHMARK.md  CANVAS.md  EXTENDING.md  GOLDEN_BRIDGE.md  GOLDEN_CHAIN.md  SCORING.md
games/trinity_fold/fixtures/: catalog.json  generated_claim_cards.json
games/trinity_fold/src/: claim.rs  fixtures.rs  io.rs  lib.rs  main.rs  scoring.rs  search.rs
games/trinity_fold/tests/: scoring.rs
games/trinity_fold/web/: app.js  index.html  style.css
games/trinity_fold/web/canvas/: index.html
paper/: CHANGELOG_v1_to_v2.md  README_paper.md  abstract.txt  arxiv_abstract.txt  arxiv_checklist.md  arxiv_submission.tex  endorsement_request.txt  key_equations.tex  plos_one_submission_checklist.md  trinity_paper_v33.md  trinity_paper_v34.md  wave10_paper.bib  wave10_paper.tex  wave13_paper.tex  wave17_paper_v2.tex  wave19_data_paper.tex  zenodo_prep.md
releases/: RELEASE_NOTES_v1.0-wave11.md  RELEASE_NOTES_v1.0-wave14.md
reports/: honest_pvalue_report_v20.md  rg_running_report.txt  unification_report.txt  verify_all_final_results.txt  wave20_mc_results.json
research/: README.md
scripts/: README_anti_numerology.md  anti_numerology_gate.py  audit_brain.py  benchmark_nmse.py  build_arxiv_tarball.sh  check_commit_signatures.py  check_cyrillic.py  check_english_only.sh  check_markdown_links.py  count_admitted_honest.py  generate_claims.py  honest_phenomenology_v18.py  honest_phenomenology_v20.py  prepare_arxiv.md  prepare_zenodo.md  push_release.sh  refresh_compendium.sh  sync_formulas.py
talks/: QANDA_PREP.md  SPEAKER_NOTES.md  VIDEO_ABSTRACT_SCRIPT.txt  wave13_talk.tex  wave17_talk.tex
trinity_rust/: Cargo.toml  README.md
trinity_rust/.github/workflows/: rust.yml
trinity_rust/benches/: formulas_benchmark.rs
trinity_rust/src/: biology.rs  coq_bridge.rs  cosmology.rs  export.rs  formulas.rs  gauge.rs  h4.rs  higgs.rs  json_schema.rs  lib.rs  main.rs  mixing.rs  ml_params.rs  rg.rs  ring.rs  spectral.rs  spectral_numeric.rs  stages.rs  validation.rs  yukawa.rs
verification/: Cargo.toml  README.md
verification/src/: icosian.rs  lib.rs  quaternion.rs  ring.rs
verification/tests/: ring_laws.rs
(+329 files in other folders)
