[package]
name = "trinity-h4-sm"
version = "0.1.0"
edition = "2024"
authors = ["Trinity S3AI Framework"]
description = "H4 Coxeter Group → Standard Model Derivation in Rust with Algebraic Rings"
license = "MIT"

[dependencies]
num-traits = "0.2"
num-complex = "0.4"
approx = "0.5"
nalgebra = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "trinity"
path = "src/main.rs"

[[bench]]
name = "formulas_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true

[dependencies.rayon]
version = "1.10"
optional = true

[features]
parallel = ["rayon"]
