[package]
name = "trinity-fold"
version = "0.1.0"
edition = "2021"
authors = ["Trinity S3AI Framework"]
description = "Trinity Fold — a FoldIt/AlphaFold/CASP-inspired puzzle prototype for exploring candidate unification structures under honesty-first constraints. NOT a Theory of Everything."
license = "MIT"
publish = false

[[bin]]
name = "trinity-fold"
path = "src/main.rs"

[lib]
name = "trinity_fold"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
